--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   margin: 0;
 }
 
+h1 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
 
 body {
   background: #575450;
@@ -24,7 +28,6 @@ body {
 
 .flex {
   display: flex;
-  
 }
 
 input, button {
@@ -96,10 +99,83 @@ input[type="text"] {
   opacity: 1;
 }
 
+.single-meal {
+  margin:0 auto;
+  width: 70%;
+}
 
-@media(max-width: 800px) {}
-@media(max-width: 700px) {}
+.single-meal img {
+  width: 300px;
+  margin:15px;
+  border:6px white solid;
+  border-radius: 6px;
+}
+
+
+.single-meal-info {
+  margin:20px;
+  padding:10px;
+  border:2px #e09850 dashed;
+  border-radius: 5px;
+}
+
+.single-meal p {
+  margin: 0;
+  letter-spacing: 0.5px;
+  line-height: 1.5;
+}
+
+.single-meal ul{
+  padding-left:0;
+  list-style-type:none;
+
+}
+
+h2 {
+  margin:20px;
+}
+
+.single-meal ul li {
+  border:1px solid #ededed;
+  border-radius:5px;
+  background-color:#fff;
+  display:inline-block;
+  color:#2d2013;
+  font-size: 12px;
+  font-weight: bold;
+  padding:5px;
+  margin:0 5px 5px 0;
+}
+
+@media(max-width: 800px) {
+  .meals {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media(max-width: 700px) {
+  .meals {
+    grid-template-columns: repeat(2, 1fr);
+    
+  }
+  
+  .meal {
+    height: 200px;
+    width: 200px;
+  }
+}
+
 @media(max-width: 500px) {
-  input[type="text"]
+  input[type="text"]{
   width: 100%;
+}
+
+.meals {
+  grid-template-columns: 1fr;
+}
+
+.meal {
+  height: 300px;
+  width: 300px;
+}
+
 }
